--- a/css/test.css
+++ b/css/test.css
@@ -1,5 +1,28 @@
 .above-nav {
     width: 100%;
-    height: 500px;
-    background-color: brown;
+    height: 80px;
+    background-image: url(/images/above_nav.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
 }
+
+.logo-bar {
+    width: 100%;
+    height: 80px;
+    background-image: url(/images/logo_bg_nav.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
+
+.navbar {
+    width: 100%;
+    position: fixed; 
+    height: 80px;
+    background-image: url(/images/navbar-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    z-index: 10;
+  }
