--- a/css/test.css
+++ b/css/test.css
@@ -1,3 +1,21 @@
+/* COLORS: 
+    YELLOW - #EDA23F, 
+    BROWN - #3A2817, 
+    ORANGE - #CF5B26, 
+    RED - #C33527 */
+
+/* FONTS:
+    HEADER
+    font-family: 'Titan One', sans-serif;
+
+    TEXT
+    font-family: 'Comfortaa', sans-serif;
+*/
+
+li {
+    list-style: none;
+}
+
 .above-nav {
     width: 100%;
     height: 80px;
@@ -25,4 +43,30 @@
     background-repeat: no-repeat;
     background-position-x: center;
     z-index: 10;
-  }
+}
+
+footer {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: #3A2817;
+    align-items: center;
+}
+  
+.footer-grid {
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+.footer-list {
+    list-style: none;
+}
+
+.below-footer {
+    width: 100%;
+    height: 80px;
+    background-image: url(/images/below-footer.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center;
+}
