--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,9 @@
     YELLOW - #EDA23F, 
     BROWN - #3A2817, 
     ORANGE - #CF5B26, 
-    RED - #C33527 */
+    RED - #C33527 
+    CREAM - #ECE9D5
+*/
 
 /* FONTS:
     HEADER
@@ -25,21 +27,27 @@ li {
 a {
     text-decoration: none;
     font-family: 'Comfortaa', sans-serif;
+    letter-spacing: 1px;
 }
 
 p {
     font-family: 'Comfortaa', sans-serif;
+    letter-spacing: 1px;
 }
 
 .Kacaang-logo {
-    padding-top: 1rem;
-    height: 3.5rem;
+    padding-top: 12px;
+    height: 60px;
+}
+
+body {
+    background-color: #ECE9D5;
 }
 
 /* NON-GLOBAL VARIABLES */
 .above-nav {
     width: 100%;
-    height: 3rem;
+    height: 45px;
     background-image: url(../images/above-nav.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -48,7 +56,7 @@ p {
 
 .logo-bar {
     width: 100%;
-    height: 5rem;
+    height: 80px;
     background-image: url(../images/logo-bg-nav.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -59,7 +67,7 @@ p {
 
 .navbar {
     width: 100%;
-    height: 4rem;
+    height: 70px;
     background-image: url(../images/navbar-bg.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -70,16 +78,15 @@ p {
     z-index: 10;
 }
   
-.navbar-list {
+.nav-link {
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem 3.5rem 0.5rem 3.5rem;
-    /* gap: 3.5rem; */
+    padding: 10px 60px 10px 60px;
     align-items: center;
     text-align: center;
 }
 
-.navbar-list a {
+.nav-link a {
     color: #3A2817;
 }
 
@@ -120,7 +127,7 @@ footer {
 
 .below-footer {
     width: 100%;
-    height: 40px;
+    height: 45px;
     background-image: url(../images/below-footer.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
