--- a/css/yuwen.css
+++ b/css/yuwen.css
@@ -119,8 +119,9 @@ body {
     color: #B0824D;
     font-family: 'Comfortaa', sans-serif;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 20px;
     letter-spacing: 1px;
+    padding: 0 48px 0 0;
     border: none;
     background-color: #ECE9D5;
 }
@@ -147,7 +148,8 @@ body {
     color: #B0824D;
     font-family: 'Comfortaa', sans-serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 16px;
+    padding: 20px 48px 0 0;
     letter-spacing: 1px;
     border: none;
 }
@@ -160,7 +162,7 @@ body {
     color: #B0824D;
     font-family: 'Comfortaa', sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 16px;
     letter-spacing: 1px;
 }
 
