cart.html done but no link to T&C yet

--- a/css/yuwen.css
+++ b/css/yuwen.css
@@ -208,16 +208,7 @@ body {
   }
   /*end tab*/
 
-/*account heading*/
-.accountheader {
-    color: #3A2817;
-    font-family: 'Titan One', sans-serif;
-    font-size: 24px;
-    text-align: left;
-    letter-spacing: 1px;
-    padding-bottom: 30px;
-}
-
+/*table*/
 table {
     width: 100%;
     border-collapse: separate;
@@ -245,7 +236,6 @@ th {
     background-color: #EDA23F;
 }
 
-/* required css to make rounded table (below) */
 tr:first-child th:first-child {
     border-top-left-radius: 8px;
 }
@@ -268,7 +258,9 @@ tr:last-child td:last-child {
     background-color: transparent;
     padding: 20px;
 }
+/*end table*/
 
+/*cart styles*/
 p {
     color: #3A2817;
     font-family: 'Comfortaa', sans-serif;
@@ -276,9 +268,52 @@ p {
     font-size: 16px;
 }
 
-.accountbutton {
-    padding: 12px;
-    background-color: #EDA23F;
-    border-radius: 8px;
-    margin: 0 8px;
+.p-24px {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
 }
+
+.p-12px {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+.p-12px-center {
+    color: #3A2817;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    text-align: center;
+    padding-top: 12px;
+}
+
+.actionbutton {
+    padding: 12px 16px;
+    width: 100%;
+    background-color: #CF5B26;
+    color: #ECE9D5;
+    border-radius: 8px;
+}
+
+.alignright {
+    text-align: right;
+}
+
+.alignrightpadding {
+    text-align: right;
+    padding-right: 4%;
+}
+
+textarea {
+    min-height: 150px;
+    width: 100%;
+    background-color: transparent;
+    border-radius: 10px;
+    border: 2px solid #3A2817;
+    padding: 10px;
+}
+/*end cart styles*/
