--- a/css/shop.css
+++ b/css/shop.css
@@ -6,37 +6,51 @@ red: #C33527
 */
 
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 body {
-    background-color: #ECE9D5;
-    overflow-x: hidden;
+  background-color: #ECE9D5;
+  overflow-x: hidden;
 }
 a {
-    font-family: 'Comfortaa', sans-serif;
-    letter-spacing: 1px;
+  font-family: 'Comfortaa', sans-serif;
+  letter-spacing: 1px;
 }
-p {
-    font-family: 'Comfortaa', sans-serif;
-    letter-spacing: 1px;
-    font-size: 15px;
+h3 {
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 28px;
+  letter-spacing: 1px;
+
 }
 h4 {
-    font-family: 'Comfortaa', sans-serif;
-    font-size: 20px;
-    letter-spacing: 1px;
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 20px;
+  letter-spacing: 1px;
+}
+h6 {
+  font-family: 'Comfortaa', sans-serif;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+p {
+  font-family: 'Comfortaa', sans-serif;
+  letter-spacing: 1px;
+  font-size: 15px;
 }
 .page-10-percent {
     padding: 20px 10%;
+}
+.shop-review-line img {
+  height: 12px;
 }
 
 .tab {
     display: flex;
     justify-content: space-between;
-  }
+}
    
-  .tab button {
+.tab button {
     cursor: pointer;
     padding: 8px 15px;
     margin-top: 20px;
@@ -47,39 +61,135 @@ h4 {
     box-shadow: 2px 2px 1px #B0824D;
     background-color: #ECE9D5;
     border-radius: 12px;
-  }
+}
   
-  .tab button:hover {
+.tab button:hover {
     background-color: #EDA23F;
     box-shadow: 2px 2px 1px #3A2817;
-  }
+}
   
-  .tab button.active {
+.tab button.active {
     color: #EDA23F;
     background-color: #3A2817;
-  }
-  .tabcontent {
+}
+.tabcontent {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     height: 300px;
     padding-top: 60px;
-  }
+}
 
-  .shop-content a{
+.shop-content a{
     text-decoration: none;
     color: #3A2817;
     text-align: center;
-  }
-  .shop-product-img {
+}
+.shop-product-img {
     height: 250px;
     padding-bottom: 15px;
-  }
-  .shop-content h4 {
+}
+.shop-content h4 {
     padding-bottom: 5px;
-  }
-  .shop-review-line img {
+}
+.shop-review-line img {
     padding-bottom: 0;
-  }
-  .shop-review-line {
-    padding-bottom: 60px;
-  }
+    height: 20px;
+    padding-right: 20px;
+}
+.shop-review-line {
+    padding-bottom: 10px;
+}
+
+/* individual products */
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  z-index: 2;
+  cursor: pointer;
+  /* padding-top: 150px; */
+  text-align: center;
+}
+#current-img {
+  position: fixed;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.product-info {
+  padding: 110px 12%;
+  height: 700px;
+}
+.product-info-content {
+  display: grid;
+  grid-template-columns: 36% 12% 52%;
+  padding-top: 40px;
+}
+
+.product-info-img img {
+  width: 100%;
+}
+
+.product-info-text {
+  padding: 30px 0;
+}
+.product-info-text h3 {
+  padding-bottom: 20px;
+}
+.product-info-text h6 {
+  padding-bottom: 20px;
+}
+.product-size-padding {
+  padding-right: 20%;
+}
+.product-size-grid {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+}
+.product-size-contents button {
+  width: 90%;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: 1px solid #CF5B26;
+  background-color: inherit;
+  color:#CF5B26;
+  padding: 5px 0;
+}
+
+.product-size-contents, .prod-cart-contents {
+  text-align: center;
+}
+.orange-text {
+  color: #CF5B26;
+}
+.prod-size {
+  padding-top: 10px;
+}
+.product-add-cart-padding {
+  padding-right: 20%;
+  margin-top: 50px;
+}
+.product-add-cart-grid {
+  display: grid;
+  grid-template-columns: 55% 15% 15% 15%;
+}
+.prod-add-cart-button button{
+  width: 90%;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: 1px solid #CF5B26;
+  background-color: #CF5B26;
+  color:#ECE9D5;
+  padding: 5px 0;
+}
+.prod-cart-qty-button button {
+  border-radius: 50%;
+  border: 1px solid #CF5B26;
+  color: #CF5B26;
+  background-color: inherit;
+  padding: 3px 9px;
+
+}
