--- a/css/yuwen.css
+++ b/css/yuwen.css
@@ -315,6 +315,7 @@ p {
     color: #3A2817;
     border-radius: 8px;
     border: none;
+    text-align: left;
 }
 
 .actionbutton-100 {
@@ -328,10 +329,36 @@ p {
 
 .actionbutton {
     padding: 12px 16px;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
     background-color: #CF5B26;
     color: #ECE9D5;
     border-radius: 8px;
     border: none;
+}
+
+.actionbutton-neutral {
+    padding: 8px 12px;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
+    font-size:12px;
+    background-color: #ECE9D5;
+    color: #3A2817;
+    border-radius: 8px;
+    border: none;
+    text-align: center;
+}
+
+.actionbutton-smaller {
+    padding: 8px 12px;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
+    font-size:12px;
+    background-color: #CF5B26;
+    color: #ECE9D5;
+    border-radius: 8px;
+    border: none;
+    text-align: center;
 }
 
 .alignright {
@@ -379,6 +406,7 @@ textarea {
     font-family: 'Comfortaa', sans-serif;
     font-weight: 400;
     font-size: 16px;
+    margin: 0;
 }
 
 .p-20-px-color-orange {
@@ -386,6 +414,14 @@ textarea {
     font-family: 'Comfortaa', sans-serif;
     font-weight: 400;
     font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.p-12-px-color-orange {
+    color: #EDA23F;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
     margin-bottom: 5px;
 }
 
@@ -413,4 +449,13 @@ textarea {
     padding: 20px;
     border-radius: 8px;
     border-top-right-radius: 0;
+}
+
+.imgacct {
+    width: 100%;
+    padding: 5px 0;
+}
+
+.aligncenter {
+    text-align: center;
 }
