--- a/css/about-us.css
+++ b/css/about-us.css
@@ -5,52 +5,80 @@ body {
     padding: 0;
 }
 
-.main-content {
-    background-color: #ECE9D5;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 .row {
-    padding: 0 65px 0 65px;
-    width: 100%;
-    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
-.nav-bar {
-    background-color: #EDA23F;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    justify-content: space-evenly;
+/*responsive nav bar*/
+.web-nav-bar {
+    display: block;
+    visibility: visible;
 }
 
-.nav-links {
-    display: inline-block;
-    width: fit-content;
-    text-decoration: none;
-    font-family: 'Comfortaa', sans-serif;
-    color: #2E2012;
-    font-size: 20px;
+.mobile-nav-bar {
+    display: none;
+    visibility: hidden;
 }
 
-.main-content-orange {
-    background-color: #EDA23F;
-    width: 100%;
-    height: 13%;
-    margin: 0;
-    padding: 0;
+@media only screen and (max-width: 600px) {
+    .web-nav-bar {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobile-nav-bar {
+        display: block;
+        visibility: visible;				
+    }
 }
 
-.main-content-brown {
-    background-color: #3A2817;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+/*responsive subscription*/
+.web-subscription {
+    display: block;
+    visibility: visible;
 }
 
-p1 {
+.mobile-subscription {
+    display: none;
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+    .web-subscription {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobile-subscription {
+        display: block;
+        visibility: visible;				
+    }
+}
+
+/*responsive footer*/
+.web-footer {
+    display: block;
+    visibility: visible;
+}
+
+.mobile-footer {
+    display: none;
+    visibility: hidden;
+}
+
+@media only screen and (max-width: 600px) {
+    .web-footer {
+        display: none;
+        visibility: hidden;
+    }
+
+    .mobile-footer {
+        display: block;
+        visibility: visible;				
+    }
+}
+
+h1 {
     padding-top: 58px;
     font-family: 'Titan One', sans-serif;
     color: #3A2817;
@@ -68,11 +96,12 @@ p3 {
     font-family: 'Comfortaa', sans-serif;
     color: #2E2012;
     font-size: 22px;
+    text-align: center;
 }
 
 p4 {
     font-family: 'Comfortaa', sans-serif;
-    color: #2E2012;
+    color: #3A2817;
     font-size: 18px;
 }
 
@@ -81,6 +110,132 @@ p5 {
     color: #3A2817;
     font-size: 38px;   
     text-align: center; 
+}
+
+p6 {
+    font-family: 'Comfortaa', sans-serif;
+    color: #EDA23F;
+    font-size: 18px;
+}
+
+/* .about-us-img {
+    background-image: url("about-banner.png");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+} */
+/* 
+.about-us {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} */
+
+/*banner*/
+.banner {
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    text-align: center;
+}
+
+.nav-banner {
+    background-color: #3A2817;
+    height: 100px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centered img {
+    width: 65%;
+    height: auto;
+}
+
+/*web nav bar*/
+.web-nav-bar {
+    background-color: #EDA23F;
+    padding: 0;
+    margin: 0;
+    width: 100%;   
+}
+
+.row-nav-bar {
+    padding: 10px 10%;
+}
+
+.nav-links {
+    display: inline-block;
+    width: fit-content;
+    font-weight: bolder;
+    text-decoration: none;
+    font-family: 'Comfortaa', sans-serif;
+    color: #3A2817;
+    font-size: 20px;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+}
+
+.nav {
+    padding: 0;
+    justify-content: space-between;
+}
+
+.nav-icon {
+    color: #3A2817;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+/*about us banner*/
+.about-us {
+    background-color: transparent;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.farm {
+    background-color: #EDA23F;
+    width: 100%;
+    /* height: 13%; */
+    margin: 0;
+    padding: 0;
+    height: 62%;
+    text-align: center;
+}
+
+.our-team {
+    background-color: transparent;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.row-10 {
+    padding: 56px 10% 120px 10%;
+    width: 100%;
+    margin-left: 0 !important;
+}
+
+.heading {
+    padding-bottom: 56px;
+    text-align: center;
 }
 
 .button {
@@ -92,7 +247,7 @@ p5 {
     border-radius: 10px;
     text-decoration: none;
     text-align: center;
-    padding: 16px 16px;
+    padding: 12px 56px;
     font-family: 'Comfortaa', sans-serif;
     font-weight: 600;
     font-size: 18px;
@@ -102,6 +257,74 @@ p5 {
 img {
     max-width: 100%;
     height: auto;
+}
+
+/*values*/
+.values {
+    justify-content: space-between;
+    text-align: center;
+}
+
+/*mission and vision*/
+.row-mission-vision {
+    padding: 20px 10%;
+    text-align: center;
+}
+
+.icon {
+    color: #EDA23F;
+    font-size: 50px;
+    padding-bottom: 10%;
+}
+
+.mission-vision {
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.mission {
+    background-color: #3A2817;
+}
+
+.mission img {
+    width: 20%;
+    height: auto;
+    padding-bottom: 5%;
+    padding-top: 5%;
+}
+
+.vision {
+    background-color: #EDA23F;
+}
+
+.vision img {
+    width: 20%;
+    height: auto;
+    padding-bottom: 5%;
+    padding-top: 5%;
+}
+
+/*our team*/
+.farm-button {
+    padding-top: 50px;
+    text-align: center;
+}
+
+/*web subcription*/
+.web-subscription {
+    background-color: #EDA23F;
+    width: 100%;
+    height: 13%;
+    margin: 0;
+    padding: 0;
+}
+
+.row-subscription {
+    padding: 30px 10% 30px 10%;
+    width: 100%;
+    margin-left: 0 !important;
 }
 
 input[type=text] {
@@ -132,10 +355,35 @@ button {
     margin-right: 8px;      
 }
 
+/*mobile subscription*/
+.mobile-subscription {
+    background-color: #EDA23F;
+    width: 100%;
+    height: 13%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+/*web footer*/
+.web-footer {
+    background-color: #3A2817;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.row-footer {
+    padding: 50px 10% 10px 10%;
+    width: 100%;
+    margin-left: 0 !important;
+}
+
 .footer-link {
     font-family: 'Comfortaa', sans-serif;
+    line-height: 1.5;
     color: #EDA23F;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
     text-decoration: none;
     padding-bottom: 16px;
@@ -148,7 +396,29 @@ button {
     font-size: 12px;
     font-weight: bold;
     text-decoration: none;
-    margin-top: 50px;
+    margin-top: 5%;
+}
+
+/*mobile footer*/
+.mobile-footer {
+    background-color: #3A2817;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.mobile-footer-links {
+    padding-top: 5%;
+    font-family: 'Comfortaa', sans-serif;
+    color: #EDA23F;
+    font-size: 14px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.privacy-tandc {
+    padding-top: 10%;
 }
 
 
