--- a/css/yuwen.css
+++ b/css/yuwen.css
@@ -7,11 +7,15 @@ body {
 
 /*standardised*/
 .page-10-percent {
-    padding: 20px 10%;
+    padding: 56px 10% 120px;
 }
 
 .page-20-percent {
-    padding: 20px 20%;
+    padding: 56px 20% 120px;
+}
+
+.page-20-percent .main-container {
+    padding-bottom: 0;
 }
 
 h1 {
@@ -45,6 +49,7 @@ p {
     letter-spacing: 1px;
     font-size: 14px;
 }
+
 /*end standardised*/
 
 /*others*/
@@ -60,19 +65,6 @@ p {
     text-align: center;
 }
 
-.alignright {
-    text-align: right;
-}
-
-.alignrightpadding {
-    text-align: right;
-    padding-right: 4%;
-}
-
-.aligncenter {
-    text-align: center;
-}
-
 .actionbutton {
     padding: 12px 16px;
     font-family: 'Comfortaa', sans-serif;
@@ -82,7 +74,49 @@ p {
     border-radius: 8px;
     border: none;
 }
+
+.bannerclass h1 {
+    padding-bottom: 56px;
+}
+
 /*end others*/
+
+/*faq tab*/
+.tab {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tab button {
+    cursor: pointer;
+    padding: 8px 15px;
+    margin-top: 20px;
+    font-family: 'Titan One';
+    font-size: 22px;
+    color: #3A2817;
+    border: 2px solid #3A2817;
+    box-shadow: 2px 2px 1px #B0824D;
+    background-color: #ECE9D5;
+    border-radius: 12px;
+}
+
+.tab button:hover {
+    background-color: #EDA23F;
+    box-shadow: 2px 2px 1px #3A2817;
+}
+
+.tab button.active {
+    color: #EDA23F;
+    background-color: #3A2817;
+}
+
+.tabcontent {
+    display: block;
+    height: 300px;
+    padding-top: 60px;
+}
+
+/*end faq tab*/
 
 /*questions*/
 .accordion {
@@ -130,7 +164,8 @@ p {
 
 .accordion .accordion-button {
     color: #3A2817;
-    padding: 20px 48px 0 0;;
+    padding: 20px 48px 0 0;
+    ;
     background-color: transparent;
 }
 
@@ -179,41 +214,96 @@ p {
 
 /*end link/refs*/
 
-/*tab*/
-.tab {
-    display: flex;
-    justify-content: space-between;
+/*table*/
+
+.showonlysmall {
+    display: none;
 }
 
-.tab button {
-    cursor: pointer;
-    padding: 8px 15px;
-    margin-top: 20px;
-    font-family: 'Titan One';
-    font-size: 22px;
+.table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0;
+    overflow: hidden;
     color: #3A2817;
+    border-radius: 10px;
     border: 2px solid #3A2817;
-    box-shadow: 2px 2px 1px #B0824D;
-    background-color: #ECE9D5;
-    border-radius: 12px;
+    overflow-x: auto;
 }
 
-.tab button:hover {
+.table td {
+    background-color: transparent;
+    color: #3A2817;
+    padding: 15px;
+    text-align: left;
+    border-top: 2px solid #3A2817;
+}
+
+.table th {
+    padding: 10px;
+    text-align: left;
     background-color: #EDA23F;
-    box-shadow: 2px 2px 1px #3A2817;
 }
 
-.tab button.active {
-    color: #EDA23F;
-    background-color: #3A2817;
+.table p {
+    font-size: 16px;
 }
 
-.tabcontent {
-    display: block;
-    height: 300px;
-    padding-top: 60px;
+.table .price {
+    padding-left: 0;
+    padding-right: 0;
 }
 
+tr:first-child th:first-child {
+    border-top-left-radius: 8px;
+}
+
+tr:first-child th:last-child {
+    border-top-right-radius: 8px;
+}
+
+tr:last-child td:first-child {
+    border-bottom-left-radius: 8px;
+}
+
+tr:last-child td:last-child {
+    border-bottom-right-radius: 8px;
+}
+
+/*end table*/
+
+/*cart styles*/
+textarea {
+    min-height: 150px;
+    width: 100%;
+    background-color: transparent;
+    border-radius: 10px;
+    border: 2px solid #3A2817;
+    padding: 10px;
+}
+
+.cartamt h3 {
+    font-family: 'Comfortaa', sans-serif;
+    letter-spacing: 1px;
+}
+
+.quantity p {
+    padding: 0 15px;
+}
+
+.table .removemargin {
+    margin-bottom: 0;
+    font-size: 12px;
+}
+
+.checkout-text .actionbutton {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+/*end cart styles*/
+
+/*account*/
 .tabacct {
     display: flex;
     justify-content: space-between;
@@ -249,114 +339,6 @@ p {
     height: 300px;
 }
 
-/*end tab*/
-
-/*table*/
-table {
-    width: 100%;
-    border-collapse: separate;
-    border-spacing: 0;
-    overflow: hidden;
-    color: #3A2817;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    border-radius: 10px;
-    border: 2px solid #3A2817;
-    overflow-x: auto;
-}
-
-td {
-    background-color: transparent;
-    padding: 15px;
-    text-align: left;
-    border-top: 2px solid #3A2817;
-}
-
-th {
-    padding: 15px;
-    text-align: left;
-    background-color: #EDA23F;
-}
-
-tr:first-child th:first-child {
-    border-top-left-radius: 8px;
-}
-
-tr:first-child th:last-child {
-    border-top-right-radius: 8px;
-}
-
-tr:last-child td:first-child {
-    border-bottom-left-radius: 8px;
-}
-
-tr:last-child td:last-child {
-    border-bottom-right-radius: 8px;
-}
-
-.borderitem {
-    border-radius: 10px;
-    border: 2px solid #3A2817;
-    background-color: transparent;
-    padding: 20px;
-}
-
-/*end table*/
-
-/*cart styles*/
-
-.p-36px {
-    color: #3A2817;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 36px;
-}
-
-.p-24px {
-    color: #3A2817;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 24px;
-}
-
-.p-12px {
-    color: #3A2817;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-}
-
-.p-12px-bottom {
-    color: #3A2817;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    display: inline;
-    margin: 0;
-}
-
-.p-12px-center {
-    color: #3A2817;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    text-align: center;
-    padding-top: 12px;
-}
-
-textarea {
-    min-height: 150px;
-    width: 100%;
-    background-color: transparent;
-    border-radius: 10px;
-    border: 2px solid #3A2817;
-    padding: 10px;
-}
-
-/*end cart styles*/
-
-/*account*/
 .accountcontainer {
     display: flex;
     align-items: center;
@@ -369,6 +351,10 @@ textarea {
     color: #3A2817;
 }
 
+.accountcontainer p {
+    margin-bottom: 0;
+}
+
 .accountcontainer h3 {
     font-family: 'Comfortaa', sans-serif;
     letter-spacing: 1px;
@@ -376,7 +362,7 @@ textarea {
 
 .accountcontainer h6,
 .acctrect h6,
-.acctrect-left h6{
+.acctrect-left h6 {
     color: #3A2817;
     line-height: 30px;
 }
@@ -407,21 +393,15 @@ textarea {
     border-top-right-radius: 0;
 }
 
-.acctrect-right .actionbutton {
-    width: 100%;
-    margin-bottom: 0;
-    text-align: left;
+.reedemable h6 .unreedemable h6 {
+    padding-top: 10px;
 }
 
 .acctrect-left .actionbutton,
-.acctrect .actionbutton{
+.acctrect .actionbutton {
     padding: 8px 12px;
+    margin-bottom: 10px;
     font-size: 14px;
-}
-
-.reedemable h6
-.unreedemable h6 {
-    padding-top: 10px;
 }
 
 .reedemable .actionbutton {
@@ -448,4 +428,58 @@ textarea {
     width: 100%;
     padding: 5px 0;
 }
+
 /*end acct*/
+
+
+@media (max-width: 992px) {
+
+    .col-md-8,
+    .col-md-4 {
+        width: 100%;
+        display: block;
+    }
+}
+
+@media (max-width: 640px) {
+    .table .remove {
+        display: none;
+    }
+
+    .table .removesmall {
+        display: none;
+    }
+
+    .showonlysmall {
+        display: block !important;
+    }
+}
+
+@media (max-width: 720px) {
+
+    .page-10-percent {
+        padding: 56px 2% 120px;
+    }
+} 
+
+@media (min-width: 1015px) and (max-width: 1199px) {
+    .profile .col-md-3,
+    .profile .col-md-9 {
+        width: 100%;
+    }
+    .page-20-percent {
+        padding: 56px 15% 120px;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 1014px) {
+    .page-20-percent {
+        padding: 56px 10% 120px;
+    }
+}
+
+@media (max-width: 575px) {
+    .page-20-percent {
+        padding: 56px 2% 120px;
+    }
+}
